<resources>
    <string name="app_name">AndroidTraining</string>
    <string name="サブタイトル">サブ画面タイトル</string>
    <string name="hint">名前を入力してください</string>
    <string name="drink">ドリンク</string>
    <string name="food">フード</string>
    <string name="drink1">ドリンク</string>
    <string name="man">男</string>
    <string name="namae">名前</string>
    <string name="Clear" />
    <string name="Clear1">クリア</string>
    <string name="send">送信</string>
    <string name="profile2" />
    <string name="profile">プロフィール</string>
    <string name="textname">名前を入力してください</string>
    <string name="clear1">クリア</string>
    <string name="NumPass">パスワードは数値で入力してください</string>
    <string name="NumPass1">パスワードは数値で入力してください</string>
    <string name="age">年代</string>
    <string name="seibetu">性別</string>
    <string name="age１">年代</string>
    <string name="age1">10代</string>
    <string name="age2">20代</string>
    <string name="age3">30代</string>
    <string name="man１">男性</string>
    <string name="female">女性</string>
    <string name="con">確認</string>
    <string name="inputData">データを入力してください</string>
    <string name="AddData">データを追加</string>
    <string name="Save">保存</string>
    <string name="cancel">キャンセル</string>
    <string name="reset">リセット</string>
    <string name="Search">検索</string>
    <string name="CameraOn">カメラ起動</string>
    <string-array name="currylist">
        <item>ドライカレー</item>
        <item>カツカレー</item>
    </string-array>
</resources>