<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_const2">

    <TextView
        android:id="@+id/age"
        android:layout_width="114dp"
        android:layout_height="30dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="32dp"
        android:text="@string/age"
        app:layout_constraintBottom_toTopOf="@+id/age1"
        app:layout_constraintEnd_toStartOf="@+id/man"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumPass" />

    <Button
        android:id="@+id/clearP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="21dp"
        android:text="@string/clear1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearN" />

    <TextView
        android:id="@+id/profile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/profile"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textname1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textname1"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/textname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/clearN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile2" />

    <Button
        android:id="@+id/clearN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="21dp"
        android:text="@string/clear1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NumPass"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/NumPass"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toStartOf="@+id/clearP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textname1" />

    <TextView
        android:id="@+id/seibetu"
        android:layout_width="114dp"
        android:layout_height="30dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="32dp"
        android:text="@string/seibetu"
        app:layout_constraintStart_toEndOf="@+id/man"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumPass" />

    <CheckBox
        android:id="@+id/age1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/age1"
        app:layout_constraintBottom_toTopOf="@+id/age2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <CheckBox
        android:id="@+id/age2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/age2"
        app:layout_constraintBottom_toTopOf="@+id/age3"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/age3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/age3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age2" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="388dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="7dp"
        android:text="@string/con"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age3" />

    <LinearLayout
        android:layout_width="98dp"
        android:layout_height="114dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="119dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toEndOf="@+id/age1"
        app:layout_constraintTop_toBottomOf="@+id/seibetu">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man１" />

            <RadioButton
                android:id="@+id/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>